# tamago

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  spec.md
.claude-plugin/: marketplace.json
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
plugin/.claude-plugin/: plugin.json
plugin/hooks/: hooks.json
src/: claude.rs  config.rs  llm.rs  logger.rs  main.rs  pet.rs  storage.rs  updater.rs
src/cmd/: chat.rs  claude_hook.rs  hook.rs  init.rs  llm_config.rs  mod.rs  name.rs  reset.rs  show.rs  show_tui.rs  skill.rs  status.rs  tick.rs  update.rs
src/llm/: claude.rs  local.rs  message.rs  mod.rs
src/pet/: mod.rs  names.rs  render.rs
src/pet/render/: adult.rs  animate.rs  baby.rs  child.rs  egg.rs  expression.rs  teen.rs
src/tracker/: mod.rs  scoring.rs
tools/: img2aa.py  img2aa.sh
