[package]
name = "tamago"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6"
flate2 = "1.1.9"
futures = "0.3.32"
nix = { version = "0.31.2", features = ["fs"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.45"
tokio = { version = "1.51.1", features = ["rt", "macros", "time", "process", "sync"] }
unicode-width = "0.2.2"

[dev-dependencies]
tempfile = "3"
