[package]
name = "tamago"
version = "0.2.1"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1"
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6"
flate2 = "1.1.9"
futures = "0.3.32"
hf-hub = { version = "0.5.0", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
nix = { version = "0.31.2", features = ["fs"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4.45"
tokenizers = { version = "0.22.2", default-features = false }
tokio = { version = "1.51.1", features = ["rt", "macros", "time", "process", "sync"] }
unicode-width = "0.2.2"

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]

[dev-dependencies]
tempfile = "3"
